--- a/css/styles.css
+++ b/css/styles.css
@@ -6,17 +6,21 @@ body{
 }
 
 header{
-    width: 80%;
+    width: 80vw;
     margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    
 }
 
-header > h2{
+header > h1{
     font-family: 'Monsterrat', sans-serif;
-
+    letter-spacing: .25vw;
+    white-space: nowrap;
+}
+header a{
+    text-decoration: none;
+    color: black;
 }
 
 header > ul{
@@ -24,7 +28,26 @@ header > ul{
     flex-direction: row;
     height: 0px;
     padding: 0em 0 4em 0;
+    list-style: none;
+    justify-content: space-around;
+    max-width: 60%;
+    min-width: 22%;
+    width: 40%;
+    font-family: sans-serif;
+    color: black;
+}
+header > ul li{
+    font-size: larger;
+    white-space: nowrap;
+}
 
+header > ul li a{
+    font-size: 1em;
+    transition: font-size .25s;
+}
+
+header > ul li a:hover{
+    font-size: 1.1em;
 }
 
 #body{
@@ -59,4 +82,27 @@ hr.thickWhiteUnderline{
 }
 #titleHomeLink:visited{
     color: black;
+}
+
+@media screen and (max-width: 1050px) {
+    header{
+        flex-direction: column;
+        width: 80vw;
+    }
+    header > ul{
+        margin-top: 0vh;
+        padding: 0em 0 2em 0;
+        max-width: unset;
+        width: 80vw;
+        justify-content: space-around;
+        /* flex-direction: column; */
+    }
+    header > ul li{
+        /* border-bottom: 2px solid black; */
+        text-align: center;
+        width: 8em;
+        margin: 0;
+        padding: 0;
+    }
+
 }
