--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,13 @@ header > ul li a:hover{
     font-size: 1.1em;
 }
 
+.headerulverticallines{
+    border: 1px solid black;
+    height: 1em;
+    width: 0px;
+    margin: 0 .5em 0 .5em;
+}
+
 #body{
     width: 100%;
     border: 0px;
@@ -105,4 +112,17 @@ hr.thickWhiteUnderline{
         padding: 0;
     }
 
+}
+@media screen and (max-width: 430px) {
+    .headerulverticallines{
+        border: 1px solid #0000;
+    }
+    header > ul{
+        margin: auto;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        height: 1em;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
