--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,10 @@ body{
 }
 
 header{
-    width: 80vw;
+    width: 100vw;
     margin: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -17,36 +17,47 @@ header > h1{
     font-family: 'Monsterrat', sans-serif;
     letter-spacing: .25vw;
     white-space: nowrap;
+    max-width: 80vw;
+    margin-left: 10vw;
 }
 header a{
     text-decoration: none;
     color: black;
 }
 
-header > ul{
+#headernav{
     display: flex;
     flex-direction: row;
     height: 0px;
-    padding: 0em 0 4em 0;
+    padding: 1em 0 2em 0;
     list-style: none;
     justify-content: space-around;
-    max-width: 60%;
+    /* max-width: 60%; */
     min-width: 22%;
-    width: 40%;
+    width: 100%;
+    margin: auto;
+    margin-top: -1em;
     font-family: sans-serif;
     color: black;
+    background-color: #b2dbcba0;
+    border: solid #b2dbcb;
+    border-top-width: thick;
+    border-bottom-width: thick;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    
 }
-header > ul li{
+header > div > ul li{
     font-size: larger;
     white-space: nowrap;
 }
 
-header > ul li a{
+header > div > ul li a{
     font-size: 1em;
     transition: font-size .25s;
 }
 
-header > ul li a:hover{
+header > div > ul li a:hover{
     font-size: 1.1em;
 }
 
@@ -101,18 +112,19 @@ hr.thickWhiteUnderline{
 @media screen and (max-width: 1050px) {
     header{
         flex-direction: column;
-        width: 80vw;
+        width: 100vw;
     }
-    header > ul{
+    #headernav{
         margin-top: 0vh;
-        padding: 0em 0 2em 0;
+        padding: 1em 0 2em 0;
+        margin: auto;
+        margin-top: -1em;
         max-width: unset;
-        width: 80vw;
+        width: 100vw;
         justify-content: space-around;
         /* flex-direction: column; */
     }
-    header > ul li{
-        /* border-bottom: 2px solid black; */
+    header > div > ul li{
         text-align: center;
         width: 8em;
         margin: 0;
@@ -122,20 +134,29 @@ hr.thickWhiteUnderline{
 }
 @media screen and (max-width: 600px) {
     .headerulverticallines{
-        border: 1px solid #0000;
+        border: 0px solid #0000;
+        visibility: hidden;
     }
-    header > ul{
-        margin: auto;
-        margin-top: 1em;
-        margin-bottom: 1em;
-        height: 1em;
+    #headernav{
+        margin: 0;
+        margin-top: 0em;
+        margin-bottom: 0em;
+        padding: 3em 0 3em 0;
+        height: 4em;
+        width: 100%;
         flex-direction: column;
-        justify-content: center;
-        width: auto;
+        justify-content: space-around;
+    }
+    #headernav li{
+        padding: .1em 0 .1em 0;
+        border-bottom: 2px solid black;
+        width: 80vw;
+        margin: auto;
     }
     header{
         justify-content: center;
         margin: auto;
+        width: 100%;
     }
     #catimgtext{
         font-size: 32pt;
